tests/error/type_match/base_case_tuple_mismatched_elem_count2.bz
// error: unable to match type '[int32]' to '[int32, float64]'
// note: mismatched tuple element counts: 1 and 2
function test()
{
	let _: [int32, float64] = [int32]();
}
